# opticalFlow_openCV

./: .gitignore  CMakeLists.txt
data/: .~lock.compParameters.ods#  compParameters.ods
firstVersion/data/: compParameters.ods
firstVersion/src/: opticalFlow.cpp
generate_test_video/: CMakeLists.txt
generate_test_video/src/: main.cpp
opticalFlow_GUI/: CMakeLists.txt  event_handler.cpp  event_handler.hpp
opticalFlow_GUI/src/: gui.cpp  gui.hpp  main.cpp  opt_flow_frame.cpp  opt_flow_frame.hpp  opt_flow_process_directory_video.cpp  opt_flow_process_directory_video.hpp  opt_flow_video.cpp  opt_flow_video.hpp
opticalFlow_classeVersion/: CMakeLists.txt
opticalFlow_classeVersion/src/: OptFlowProcessDirectoryVideo.cpp  OptFlowProcessDirectoryVideo.hpp  OptFlowVideo.cpp  OptFlowVideo.hpp  ProcessDirectoryVideo.hpp  main.cpp  opt_flow_process_directory_video.cpp  opt_flow_process_directory_video.hpp  opt_flow_video.cpp  opt_flow_video.hpp
src/: opticalFlow.cpp
